<resources>
    <string name="app_name">EDUTRAILS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Edu Trails</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- add names here -->

    <string name="menu_discover">Erkunden</string>
    <string name="menu_start_tour">Tour starten</string>
    <string name="menu_create_tour">Tour erstellen</string>
    <string name="menu_achievements">Errungenschaften</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_my_edu">Mein Edu</string>
    <string name="title_activity_maps">Map</string>

    <string name="dialog_chose_destination">Ziel auswählen</string>
    <string name="dialog_chose_destination2">Auf die Karte tippen um \n ein Ziel zu wählen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>